--- a/magnum/drivers/k8s_fedora_atomic_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_fedora_atomic_v1/templates/kubemaster.yaml
@@ -186,6 +186,10 @@ parameters:
     type: string
     description: ID of the security group for kubernetes master.
 
+  secgroup_kube_cluster_id:
+    type: string
+    description: ID of the security group for kubernetes cluster wide.
+
   api_pool_id:
     type: string
     description: ID of the load balancer pool of k8s API server.
@@ -688,6 +692,7 @@ resources:
       network: {get_param: fixed_network}
       security_groups:
         - {get_param: secgroup_kube_master_id}
+        - {get_param: secgroup_kube_cluster_id}
       fixed_ips:
         - subnet: {get_param: fixed_subnet}
       allowed_address_pairs:
